--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width,  initial-scale=1" />
     <meta name="description" content="Coffee Shop" />
     <meta name="author" content="Jordan Crow Miller" />
-    <meta keywords="html, CSS" />
+    <meta name="keywords" content="HTML,CSS" />
     <link rel="stylesheet" href="./pages/index.css" />
     <link rel="stylesheet" href="vendor/normalize.css" />
     <link rel="icon" type="image/x-icon" href="./favicon.ico" />
@@ -15,6 +15,7 @@
       href="https://fonts.googleapis.com/css2?family=Inter:wght@100..900&family=Noto+Serif:ital,wght@0,100..900;1,100..900&display=swap"
       rel="stylesheet"
     />
+    <title>Coffe Shop</title>
   </head>
   <body>
     <div class="page">
