--- a/index.html
+++ b/index.html
@@ -28,9 +28,9 @@
           />
           <ul class="nav__links">
             <li><a href="#recipes" class="nav__link">Recipes</a></li>
-            <li><a href="#book" class="nav__link">Book a table</a></li>
+            <li><a href="#reservation" class="nav__link">Book a table</a></li>
             <li><a href="#menu" class="nav__link">Menu</a></li>
-            <li><a href="#contact" class="nav__link">Contacts</a></li>
+            <li><a href="#about" class="nav__link">Contacts</a></li>
           </ul>
         </nav>
         <h1 class="header__title">
@@ -93,9 +93,9 @@
             </div>
           </div>
         </section>
-        <section class="reservation"></section>
-        <section class="about"></section>
-        <section class="menu"></section>
+        <section id="reservation" class="reservation"></section>
+        <section id="about" class="about"></section>
+        <section id="menu" class="menu"></section>
       </main>
       <footer class="footer"></footer>
     </div>
