--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
           <h2 class="reservation__title">Book a table</h2>
           <form class="reservation__form form">
             <fieldset class="form__fieldset">
-              <label for="" class="form__label">
+              <label for="reservation name" class="form__label">
                 Name *
                 <input
                   type="text"
@@ -105,15 +105,15 @@
                   placeholder="Name Surname"
                 />
               </label>
-              <label for="" class="form__label">
+              <label for="number of guests *" class="form__label">
                 Number of guests *
                 <input type="number" class="form__input" placeholder="1-8" />
               </label>
-              <label for="" class="form__label">
+              <label for="date and time *" class="form__label">
                 Date & time *
                 <input type="datetime-local" class="form__input" />
               </label>
-              <label for="" class="form__label">
+              <label for="Your email *" class="form__label">
                 Your email *
                 <input
                   type="email"
