--- a/index.html
+++ b/index.html
@@ -97,28 +97,39 @@
           <h2 class="reservation__title">Book a table</h2>
           <form class="reservation__form form">
             <fieldset class="form__fieldset">
-              <label for="reservation name" class="form__label">
+              <label for="name" class="form__label">
                 Name *
                 <input
                   type="text"
                   class="form__input"
                   placeholder="Name Surname"
+                  id="name"
                 />
               </label>
-              <label for="number of guests *" class="form__label">
+              <label for="number-of-guests" class="form__label">
                 Number of guests *
-                <input type="number" class="form__input" placeholder="1-8" />
+                <input
+                  type="number"
+                  class="form__input"
+                  placeholder="1-8"
+                  id="number-of-guests"
+                />
               </label>
-              <label for="date and time *" class="form__label">
+              <label for="date-and-time" class="form__label">
                 Date & time *
-                <input type="datetime-local" class="form__input" />
+                <input
+                  type="datetime-local"
+                  class="form__input"
+                  id="date-and-time"
+                />
               </label>
-              <label for="Your email *" class="form__label">
+              <label for="email *" class="form__label">
                 Your email *
                 <input
                   type="email"
                   class="form__input"
                   placeholder="email@emailme.com"
+                  id="email"
                 />
               </label>
             </fieldset>
