New update for my project

--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
                   id="date-and-time"
                 />
               </label>
-              <label for="email *" class="form__label">
+              <label for="email" class="form__label">
                 Your email *
                 <input
                   type="email"
@@ -134,9 +134,9 @@
               </label>
             </fieldset>
             <button class="form__button">Book a table</button>
-            <label for="" class="form__label form__label_type_checkbox">
-              <input type="checkbox" class="form__checkbox" />I agree with terms
-              of use
+            <label for="checkbox" class="form__label form__label_type_checkbox">
+              <input type="checkbox" class="form__checkbox" id="checkbox" />I
+              agree with terms of use
             </label>
           </form>
         </section>
