--- a/index.html
+++ b/index.html
@@ -217,11 +217,9 @@
           </ul>
         </section>
         <section id="about" class="about">
-          <h2 class="about__title">
-            About the coffee shop
-            <div class="about__circle"></div>
-            <div class="about__circle_animation_blurred"></div>
-          </h2>
+          <h2 class="about__title">About the coffee shop</h2>
+          <div class="about__circle about__circle_animation_blurred"></div>
+          <div class="about__circle"></div>
           <h3 class="about__content">
             <p class="about__paragraph">
               Our coffee shop is located in the Triple Peaks Library. It
