New Update fOr my project

--- a/index.html
+++ b/index.html
@@ -239,8 +239,8 @@
       <footer id="contacts" class="footer">
         <div class="footer__content">
           <img src="./images/logo_coffeeshop_light.svg" alt="coffeeshop logo" />
-          <h3 class="footer__social-heading">
-            Social Media
+          <div>
+            <h3 class="footer__social-heading">Social Media</h3>
             <ul class="footer__list">
               <li class="footer__list-item">
                 <img
@@ -259,7 +259,7 @@
                 <a href="" class="footer__social-link">Facebook</a>
               </li>
             </ul>
-          </h3>
+          </div>
         </div>
         <p class="footer__copyright">&copy; 2024 Jordan Miller</p>
       </footer>
