--- a/index.html
+++ b/index.html
@@ -103,6 +103,7 @@
                   class="form__input"
                   placeholder="Name Surname"
                   id="name"
+                  required
                 />
               </label>
               <label for="number-of-guests" class="form__label">
@@ -112,6 +113,7 @@
                   class="form__input"
                   placeholder="1-8"
                   id="number-of-guests"
+                  required
                 />
               </label>
               <label for="date-and-time" class="form__label">
@@ -120,6 +122,7 @@
                   type="datetime-local"
                   class="form__input"
                   id="date-and-time"
+                  required
                 />
               </label>
               <label for="email" class="form__label">
@@ -129,6 +132,7 @@
                   class="form__input"
                   placeholder="email@emailme.com"
                   id="email"
+                  required
                 />
               </label>
             </fieldset>
@@ -143,8 +147,7 @@
           <h2 class="menu__title">Menu</h2>
           <p class="menu__subtitle">
             We brew coffee from locally roasted, Fairtrade certified beans and
-            use biodegradable <br />cups. All teas from our collection are
-            $2/cup.
+            use biodegradable cups. All teas from our collection are $2/cup.
           </p>
           <ul class="menu__cards">
             <li class="card">
@@ -220,7 +223,7 @@
           <h2 class="about__title">About the coffee shop</h2>
           <div class="about__circle about__circle_animation_blurred"></div>
           <div class="about__circle"></div>
-          <h3 class="about__content">
+          <div class="about__content">
             <p class="about__paragraph">
               Our coffee shop is located in the Triple Peaks Library. It
               features 6 tables and free WiFi.
@@ -233,12 +236,16 @@
               don't sell single-use cups. But you can buy one of our reusable
               cups!
             </p>
-          </h3>
+          </div>
         </section>
       </main>
       <footer id="contacts" class="footer">
         <div class="footer__content">
-          <img src="./images/logo_coffeeshop_light.svg" alt="coffeeshop logo" />
+          <img
+            class="footer__logo"
+            src="./images/logo_coffeeshop_light.svg"
+            alt="coffeeshop logo"
+          />
           <div>
             <h3 class="footer__social-heading">Social Media</h3>
             <ul class="footer__list">
